--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,81 @@
-/* 
+body {
+    background-color: #F9F9F9;
+    font-family: "Lato", sans-serif;
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+}
 
-*/
+.title {
+    font-size: 5rem;
+    font-weight: 100;
+    font-style: normal;
+}
+
+input {
+    border: 0;
+}
+
+input:focus {
+    outline: none;
+    border: none;
+}
+
+.col-8 {
+    border: solid;
+    border-width: 1px;
+    width: 100%;
+    border-color: #E1E3E1;
+}
+
+input::placeholder {
+    font-size: 1.3rem;
+    font-weight: 400;
+    font-style: normal;
+    color: #a4a7a4;
+}
+
+.tasks {
+    font-size: 2rem;
+    font-weight: 300;
+    font-style: normal;
+}
+.task {
+    list-style: none;
+}
+
+.task-done {
+    text-decoration:line-through;
+    color:#E1E3E1
+}
+
+.icon {    
+    font-size: 1.7rem;
+}
+
+.done {
+    color:greenyellow;
+}
+
+
+
+.delete {
+    font-size: 1.7rem;
+    color:red;
+}
+
+.items-number {
+    font-size: 0.8rem;
+    color: #acb3ac;
+}
+.subpaper1, .subpaper2 {
+    border: solid;
+    border-width: 1px;
+    height: 5px;
+    border-color: #E1E3E1;
+    margin: auto;
+}
+.subpaper1 {
+    width: 99%;
+}
+.subpaper2 {
+    width: 98%;
+}
